third_party/WebKit/Source/modules/vr/VRDisplay.h
@@ -140,6 +140,7 @@ class VRDisplay final : public EventTargetWithInlineData,
   void ConnectVSyncProvider();
   void OnVSyncConnectionError();
 
+  bool IsPresentationFocused();
   ScriptedAnimationController& EnsureScriptedAnimationController(Document*);
   void ProcessScheduledAnimations(double timestamp);
   void ProcessScheduledWindowAnimations(double timestamp);
